fixed css of men,women,landing page and wishlist

--- a/Frontend/fashion/src/Components/CartDrawer.css
+++ b/Frontend/fashion/src/Components/CartDrawer.css
@@ -125,12 +125,16 @@
 }
 
 .quantity-control button {
-  width: 28px;
-  height: 28px;
+  width: 36px;
+  height: 36px;
   border: 1px solid #ddd;
-  background: white;
-  border-radius: 4px;
+  background: none;
+  font-size: 18px;
   cursor: pointer;
+  border-radius: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   color: black;
 }
 
